public class Constants
{
    public const string HORIZONTAL_AXIS = "Horizontal";
    public const string VERTICAL_AXIS = "Vertical";

    public const string MOVE_SPEED = "MoveSpeed";
    public const string PLAYER = "Player";
    public const string ATTACK = "Attack";
    public const string IN_COMBAT = "InCombat";
}
